# embedded-block-game

./: .gitignore  Makefile  PROJECT_NOTES.md  README.md
hw/: Makefile  README.md  generate_recip_lut.py  generate_textures.py  recip_lut.hex  safdkljsda.txt  sdram_selftest_vga.sv  soc_system.dtb  soc_system.dts  soc_system.qpf  soc_system.qsf  soc_system.qsys  soc_system.sdc  soc_system.sopcinfo  soc_system.tcl  soc_system_assignment_defaults.qdf  soc_system_top.sv  textures.hex  textures.mif  unset_perl  vga_ball_hw.tcl~  voxel_gpu.sv  voxel_gpu_hw.tcl
lab3-hw/: soc_system.qpf  soc_system.qsf  soc_system_top.sv  vga_ball.sv  vga_ball_hw.tcl
lab3-sw/: hello.c  vga_ball.h
scripts/: diagram_source_model.py  gen_breakdown_docs.py  gen_datapath_diagram.py  gen_diagram_viewer.py  gen_hps_game_logic_breakdown.py  gen_netlist_json.sh  gen_operator_diagrams.py  gen_pipeline_diagram.py  gen_timing_diagram.py  render_timing_diagram.py  run_voxel_gpu_tb.sh
sw/: Makefile  README  block_types.c  block_types.h  chat.c  chat.h  command_parser.c  command_parser.h  env_util.h  example_user_space.c  game.c  game_home.c  game_home.h  game_items.c  game_items.h  gen_worker.c  gen_worker.h  gpu_transport.c  gpu_transport.h  hello.c  input.c  input.h  inventory.c  inventory.h  mesh_worker.c  mesh_worker.h  pause_menu.c  pause_menu.h  player_physics.c  player_physics.h  renderer.c  renderer.h  vga_ball.c  (+13 more)
virtual_hw/: README.md  protocol.py  pyproject.toml  raster.py  server.py
virtual_hw/tests/: test_raster.py
virtual_hw/virtualhw/: __init__.py  protocol.py  raster.py  server.py
(+509 files in other folders)
