[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualhw"
version = "0.1.0"
description = "Virtual voxel GPU monitor for embedded-block-game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
virtualhw = "virtualhw.server:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["virtualhw*"]
